--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="clear_button">clear</string>
     <string name="refresh_button">refresh</string>
     <string name="get_button">get</string>
+    <string name="box_view_title">data number</string>
 </resources>
