added connection desc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="box_view_title">data number</string>
     <string name="settings">settings</string>
     <string name="help">help</string>
+    <string name="connecting">connecting</string>
 </resources>
